--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,7 +18,7 @@
     var stompClient = Stomp.over(ws);
 
     stompClient.connect({}, function (frame) {
-        stompClient.subscribe("/topic/c", function (message) {
+        stompClient.subscribe("/topic/chat", function (message) {
             $("#chat").append("<li>" + message.body + "</li>");
         }, function (err) {
             console.log(err);
@@ -26,7 +26,7 @@
     });
 
     function sendMessage() {
-        stompClient.send("/topic/c", {}, $("#messageInput").val())
+        stompClient.send("/app-chat/chat", {}, $("#messageInput").val())
     }
 
 </script>
